[gd_scene load_steps=3 format=3 uid="uid://dyj6qeaaa3cfi"]

[ext_resource type="Script" path="res://source/Actor/Enemies/Spawner/Spawner.gd" id="1_dubaa"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ef4wl"]
radius = 10.0

[node name="Spawner" type="Marker3D"]
script = ExtResource("1_dubaa")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_ef4wl")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
